Jlink
Build script uses jlink to create minimal runtime environment image; run script uses this very runtime, making jars obsolete; we leave jars though, because of formal requirements